# rullm

./: .gitignore  .justfile  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/rullm-cli/: Cargo.toml
crates/rullm-cli/src/: aliases.rs  api_keys.rs  args.rs  auth.rs  cli_client.rs  cli_helpers.rs  client.rs  config.rs  constants.rs  main.rs  output.rs  provider.rs  spinner.rs  templates.rs
crates/rullm-cli/src/commands/: alias.rs  auth.rs  chat.rs  completions.rs  info.rs  keys.rs  mod.rs  models.rs  templates.rs
crates/rullm-cli/src/commands/chat/: completer.rs  interactive.rs  mod.rs  prompt.rs  slash_command.rs
crates/rullm-cli/src/oauth/: anthropic.rs  mod.rs  openai.rs  pkce.rs  server.rs
crates/rullm-core/: Cargo.toml
crates/rullm-core/examples/: README.md  anthropic_simple.rs  anthropic_stream.rs  basic_usage.rs  gemini_stream.rs  google_simple.rs  middleware_usage.rs  openai_basic.rs  openai_config.rs  openai_conversation.rs  openai_simple.rs  openai_stream.rs  retry_policy_example.rs  simple_usage.rs  test_all_providers.rs
crates/rullm-core/src/: compat_types.rs  config.rs  error.rs  lib.rs  middleware.rs  simple.rs  tests.rs  types.rs
crates/rullm-core/src/providers/: anthropic.rs  google.rs  groq.rs  mod.rs  openai.rs  openai_compatible.rs  openrouter.rs
crates/rullm-core/src/providers/anthropic/: client.rs  mod.rs  types.rs
crates/rullm-core/src/providers/google/: client.rs  mod.rs  types.rs
crates/rullm-core/src/providers/openai/: client.rs  mod.rs  types.rs
crates/rullm-core/src/utils/: mod.rs  sse.rs  test_helpers.rs
