[workspace]
members = ["crates/rullm-core", "crates/rullm-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# Core library dependencies
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout", "retry", "limit", "util"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tower-service = "0.3"
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
strum = "0.27"
strum_macros = "0.27"
dirs = "5"
metrics = "0.23"
once_cell = "1.19"

# CLI-specific dependencies
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "chrono",
] }
owo-colors = "4.0"
atty = "0.2"
toml = "0.8"
etcetera = "0.8"
reedline = "0.41.0"

# Dev dependencies
tokio-test = "0.4"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
