[package]
name = "rullm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []

[dependencies]
# Depend on the lib crate
rullm-core = { package = "rullm-core", path = "../rullm-core" }

futures.workspace = true

# CLI-specific dependencies
clap.workspace = true
clap_complete = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
owo-colors.workspace = true
atty.workspace = true
toml.workspace = true
etcetera.workspace = true
serde.workspace = true
tokio.workspace = true
strum.workspace = true
strum_macros.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
reedline.workspace = true
tempfile.workspace = true

# OAuth dependencies
sha2 = "0.10"
rand = "0.9"
base64 = "0.22"
webbrowser = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde_urlencoded = "0.7"
urlencoding = "2.1"
hex = "0.4"

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "rullm"
path = "src/main.rs"
